# atbatwatch

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  config.toml  config.toml.bak  docker-compose.acceptance.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  prometheus.yml  pyproject.toml
.github/workflows/: bootstrap.yml  ci.yml  deploy.yml
acceptance/: Dockerfile  conftest.py
acceptance/contracts/: test_db_schema.py  test_diff_patch.py  test_e2e_pipeline.py  test_http_api.py  test_idempotency.py  test_notification_prefs.py  test_poll_rate.py  test_streams.py
acceptance/stubs/: mlb_stub.py  webhook_capture.py
atbatwatch/: api.py  cli.py  config.py  db.py  delivery_worker.py  diff_engine.py  fanout_worker.py  games.py  http_api.py  notifier.py  players.py  poller.py  redis_client.py  settings.py  types.py  watcher.py
atbatwatch/repos/: follows.py
cmd/api/: main.go
cmd/delivery/: delivery_test.go  (+1 more)
deploy/: backup.sh  bootstrap.sh
docker/: api.Dockerfile  delivery.Dockerfile  fanout.Dockerfile  migrate.Dockerfile  poller.Dockerfile
docs/: agent_frontend_testing.md  go_rewrite_handoff.md  howto.md  local_prod_dry_run.md  mlb_api.md  scale_up_plan.md  testing_strategy.md  testing_strategy_handoff.md  todo.md
frontend/: api.js  dashboard.html  index.html  login.html  signup.html  theme.js
migrations/: env.py
scripts/: capture_diff_patch.py
tests/: conftest.py  test_api.py  test_delivery.py  test_diff_engine.py  test_fanout.py  test_games.py  test_http_api.py  test_players.py  test_poller.py  test_repos.py  test_watcher.py
(+56 files in other folders)
