[project]
name = "atbatwatch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["acceptance"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyrefly]
